chore: update pom configs and add jar files